--- a/2.html
+++ b/2.html
@@ -28,12 +28,12 @@
                         <div class="modal-content">
                           <div>
                              <span class="close">&times;</span>
-                            <video width="1000" height="700" style="margin-top:-50px;margin-left:100px"  autoplay loop  muted>
+                            <video width="1000" height="700" style="margin-top:-50px;margin-left:20px"  autoplay loop  muted>
                                 <source src="images/chat_video.mp4" type="video/mp4">
                                 <source src="movie.ogg" type="video/ogg">
                                 Your browser does not support the video tag.
                              </video>
-                             <div style="margin-left:45%;  margin-top:-3%;">
+                             <div style="margin-left:45%;  margin-top:-5%;">
                               <button type="reset"  class=".button-chat" style="background-color:transparent; border-color:transparent;"> 
                                 <img src="./images/mic.png" height="55"/>
                               </button>
@@ -84,9 +84,9 @@
   z-index: 1; /* Sit on top */
   padding-top: 66px; /* Location of the box */
   left: 0;
-  top: 0;
+  top: -7%;
   width: 100%; /* Full width */
-  height: 106%; /* Full height */
+  height: 115%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
